docs/api/qiskit/0.19/qiskit.qobj.QasmQobjConfig.mdx
---
title: QasmQobjConfig (v0.19)
description: API reference for qiskit.qobj.QasmQobjConfig in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmQobjConfig
---

# QasmQobjConfig

<Class id="qiskit.qobj.QasmQobjConfig" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/qobj/qasm_qobj.py" signature="QasmQobjConfig(shots=None, max_credits=None, seed_simulator=None, memory=None, parameter_binds=None, memory_slots=None, n_qubits=None, **kwargs)" modifiers="class">
  A configuration for a QASM Qobj.

  Model for RunConfig.

  **Parameters**

  *   **shots** (*int*) – the number of shots.
  *   **max\_credits** (*int*) – the max\_credits to use on the IBMQ public devices.
  *   **seed\_simulator** (*int*) – the seed to use in the simulator
  *   **memory** (*bool*) – whether to request memory from backend (per-shot readouts)
  *   **parameter\_binds** (*list\[dict]*) – List of parameter bindings
  *   **memory\_slots** (*int*) – The number of memory slots on the device
  *   **n\_qubits** (*int*) – The number of qubits on the device
  *   **kwargs** – Additional free form key value fields to add to the configuration.

  ## Methods

  <span id="qasmqobjconfig-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.QasmQobjConfig.from_dict" signature="QasmQobjConfig.from_dict(data)" modifiers="classmethod">
    Create a new QasmQobjConfig object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary for the config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [QasmQobjConfig](qiskit.qobj.QasmQobjConfig "qiskit.qobj.QasmQobjConfig")
  </Function>

  <span id="qasmqobjconfig-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.QasmQobjConfig.to_dict" signature="QasmQobjConfig.to_dict()">
    Return a dictionary format representation of the QASM Qobj config.

    **Returns**

    The dictionary form of the QasmQobjConfig.

    **Return type**

    dict
  </Function>
</Class>

